--- a/app/src/App.css
+++ b/app/src/App.css
@@ -14,6 +14,7 @@
   padding: 0 30px 0 30px;
   color: white;
   position: relative;
+  align-items: center;
   /* background-color: #35aee2; */
 }
 
@@ -48,7 +49,7 @@
 .cta-button {
   height: 45px;
   border: 0;
-  width: auto;
+  width: 100%;
   padding-left: 40px;
   padding-right: 40px;
   border-radius: 10px;
@@ -68,7 +69,7 @@
   background: -webkit-linear-gradient(left, #4e44ce, #35aee2);
   background-size: 200% 200%;
   animation: gradient-animation 4s ease infinite;
-  margin-left: 10px;
+  /* margin-left: 10px; */
 }
 
 .footer-container {
@@ -93,7 +94,7 @@
   color: white;
 }
 
-.connected-container input[type='text'] {
+.connected-container input[type="text"] {
   display: inline-block;
   padding: 10px;
   width: 50%;
